--- a/k8s-deployment.yml
+++ b/k8s-deployment.yml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: my-app-container
         image: ayanjyoti/advanced-app:latest  # This is a placeholder
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
 
